# metamodule-sanguine-mutants

./: .gitignore  .gitmodules  CMakeLists.txt  plugin-mm.json
SanguineMutants/alt_firmware/clouds_parasite/dsp/pvoc/: etesia_phase_vocoder.h
SanguineMutants/alt_firmware/mutuus/dsp/fx/: mutuus_fx_engine.h
SanguineMutants/eurorack/plaits/dsp/fx/: fx_engine.h
SanguineMutants/eurorack/plaits/dsp/oscillator/: sine_oscillator.h
SanguineMutants/eurorack/stmlib/dsp/: cosine_oscillator.h  filter.h
SanguineMutants/src/: Funes.cpp  aestus.cpp  aleae.cpp  anuli.cpp  contextus.cpp  distortiones.cpp  etesia.cpp  explorator.cpp  fluctus.cpp  incurvationes.cpp  marmora.cpp  mortuus.cpp  mutuus.cpp  nebulae.cpp  nodi.cpp  plugin.cpp  plugin.hpp  sanguinecomponents.cpp  temulenti.cpp  vimina.cpp
